manifests/argocd/workloads/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - port: 80
      targetPort: 8096
      protocol: TCP
      name: http
